[package]
name = "incremental-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
strum = "0.25"
strum_macros = "0.25"

[dependencies.bevy]
#version = "0.10.1"
git = "https://github.com/bevyengine/bevy.git"
branch = "main"
features = ["dynamic_linking"]
